# SageIngest

./: CMakeLists.txt  INSTALL  README.md
Example/: create_sage_test_table.sql
SageIngest/: Sage_Reader.cpp  Sage_Reader.h  Sage_SchemaMapper.cpp  Sage_SchemaMapper.h  main.cpp  sageingest_error.cpp  sageingest_error.h
